frontend/tests/cases/positive/graded/approximation.gr
-- Different kinds of approximation use for box types
-- and grades

approx : forall {a : Type, b : Type}
       . (a -> b [0..1])
       -> (a -> b [1..1])
approx f x = f x

approxL : forall {a : Type, b : Type}
        . (a [1..1] -> b)
        -> (a [0..1] -> b)
approxL f = f

approxey : forall {a : Type} . a [0..1] -> a [0..0]
approxey x = x