frontend/tests/cases/negative/hsup/pushOneZero.gr
pushOneZero : forall {a b : Type} . (a, b) [One] -> (a [Zero], b [One])
pushOneZero [(x, y)] = ([x], [y]) 